--- a/top/grid/styles.css
+++ b/top/grid/styles.css
@@ -9,7 +9,6 @@ body {
 
 .house {
 	display: inline-grid;
-	grid-area: house;
 	grid-template-columns: repeat(4, 100px);
 	grid-auto-rows: 70px;
 	grid-template-areas:
@@ -54,7 +53,6 @@ body {
 	width: 500px;
 	padding: 5px;
 	display: grid;
-	grid-area: mdn-container;
 	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: 50px;
 	background-color: white;
@@ -90,4 +88,18 @@ body {
 
 #item4 {
 	grid-area: four;
+}
+
+.advanced-grid-container {
+	display: grid;
+	resize: both;
+	grid-template-columns: repeat(5, 50px);
+	grid-template-rows: repeat(2, 50px);
+	gap: 10px;
+	color: white;
+}
+
+.item {
+	width: 100%;
+	background-color: orange;
 }
